--- a/assets/assets/translations/en-US.json
+++ b/assets/assets/translations/en-US.json
@@ -55,7 +55,7 @@
   "SoftSkills4": "Experience releasing apps to CHPlay, AppleStore.",
   "Technologies": "Technologies",
   "Technologies1": "Flutter, Laravel, React Native, ReactJS, ASP NetCore, Jquery, NodeJS, SocketIO, Bootstrap",
-  "Technologies2": "Trello, Planner, Github, Gitlab, Bitbucket, Figma, FlutterFlow, Docker, Postman, Jira.",
+  "Technologies2": "Trello, Planner, Github, Gitlab, Bitbucket, Figma, FlutterFlow, Docker, Postman, Jira, Notion.",
   "Technologies3": "SQL Server, MySql, MongoDB.",
   "OfficeInformatics": "Office Informatics",
   "OfficeInformatics1": "Good at using Word, Excel, Powerpoint",
