--- a/assets/assets/translations/ja-JP.json
+++ b/assets/assets/translations/ja-JP.json
@@ -55,7 +55,7 @@
   "SoftSkills4": "CHPlay、AppleStore へのアプリのリリース経験。",
   "Technologies": "技術",
   "Technologies1": "Flutter, Laravel, React Native, ReactJS, ASP NetCore, Jquery, NodeJS, SocketIO, Bootstrap",
-  "Technologies2": "Trello, Planner, Github, Gitlab, Bitbucket, Figma, FlutterFlow, Docker, Postman, Jira.",
+  "Technologies2": "Trello, Planner, Github, Gitlab, Bitbucket, Figma, FlutterFlow, Docker, Postman, Jira, Notion.",
   "Technologies3": "SQL Server, MySql, MongoDB.",
   "OfficeInformatics": "オフィス情報",
   "OfficeInformatics1": "Word、Excel、Powerpointの使用が得意な方",
