--- a/assets/assets/translations/vi-VN.json
+++ b/assets/assets/translations/vi-VN.json
@@ -55,7 +55,7 @@
   "SoftSkills4": "Có kinh nghiệm release app lên CHPlay, AppleStore.",
   "Technologies": "Công nghệ",
   "Technologies1": "Flutter, Laravel, React Native, ReactJS, ASP NetCore, Jquery, NodeJS, SocketIO, Bootstrap",
-  "Technologies2": "Trello, Planner, Github, Gitlab, Bitbucket, Figma, FlutterFlow, Docker, Postman, Jira.",
+  "Technologies2": "Trello, Planner, Github, Gitlab, Bitbucket, Figma, FlutterFlow, Docker, Postman, Jira, Notion.",
   "Technologies3": "SQL Server, MySql, MongoDB.",
   "OfficeInformatics": "Tin học văn phòng",
   "OfficeInformatics1": "Sử dụng tốt Word, Excel, Powerpoint",
